Support reading unloaded decimals
This patch adds support for reading unloaded decimal columns. Previously, we would fail to parse the string into a decimal, leading to ClassCastExceptions.

Author: Josh Rosen <joshrosen@databricks.com>

Closes #62 from JoshRosen/read-decimal and squashes the following commits:

0324995 [Josh Rosen] De-bloat test suite
ba8052a [Josh Rosen] Split decimal tests into own suite
4ca6b7d [Josh Rosen] Bump permgen
8c91f04 [Josh Rosen] Support reading of unloaded decimals.
536a4d4 [Josh Rosen] Add test for reading deicmals.